--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -79,7 +79,16 @@
 
                         <input type="checkbox" id="pistachio">
                         <label for="pistachio">pistachio</label><br>
+
+                        <input type="checkbox" id="banana">
+                        <label for="banana">banana</label><br>
+
+                        <input type="checkbox" id="chocolate chip">
+                        <label for="chocolate chip">chocolate chip</label><br>
                         
+                        <input type="checkbox" id="mint">
+                        <label for="mint">mint</label><br>
+
                       </form>
                     </div>
                 </div>
@@ -110,6 +119,8 @@
                         <input type="checkbox" id="m&m's">
                         <label for="m&m's">m&m's</label><br>
 
+                        <input type="checkbox" id="marshmellows">
+                        <label for="marshmellows">marshmellows</label><br>
 
                         </form>
                     </div>
