--- a/Ice cream title index.html
+++ b/Ice cream title index.html
@@ -11,17 +11,34 @@
     <script src="jquery-3.6.3.min.js"></script>
 </head>
 <body>
+
+<!--navigation bar-->
+
+    <div class="navbar">
+        <h2>Staci's Scoops</h2>
+        <h3>Locations</h3>
+        <h3>About</h3>
+        <h3>Contact</h3>
+    </div>
+
+<!--main container-->
+
+    <div class="main-cont">
+
 <!--background colorful blob-->
-    <div class="navbar"></div>
-    
+
     <div class="blob-cont">
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <path fill="#FF0066" d="M43.1,-77.8C53.4,-68.6,57.7,-52.2,64.9,-38.1C72,-23.9,82,-11.9,80.9,-0.6C79.8,10.7,67.7,21.4,59.7,34.1C51.7,46.8,47.9,61.5,38.6,70.1C29.3,78.8,14.7,81.4,-0.8,82.8C-16.2,84.1,-32.4,84.1,-42.7,76C-53,68,-57.5,51.9,-64.8,37.9C-72.2,23.9,-82.4,11.9,-84.6,-1.3C-86.7,-14.4,-80.9,-28.9,-72.1,-40.5C-63.4,-52,-51.7,-60.7,-39.2,-68.7C-26.7,-76.7,-13.4,-83.9,1.5,-86.5C16.4,-89.1,32.7,-87,43.1,-77.8Z" transform="translate(100 100)" />
           </svg>
     </div>
 
-    <div class="">
+<!--slogan & button container-->
 
+    <div class="slogan-cont">
+        <h1>Come on,<br> give in to your urge</h1>
+        <button class="order-button" role="button">order now</button>
     </div>
+</div>
 </body>
 </html>
