--- a/Ice cream title index.html
+++ b/Ice cream title index.html
@@ -37,7 +37,7 @@
 <!--slogan & button container-->
 
     <div class="slogan-cont">
-        <h1>Come on,<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;give in to your urge</h1>
+        <h1 class="slogan">Come on,<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;give in to your urge</h1>
         <br>
         <button class="order-button" role="button">order now</button>
     </div>
