--- a/Ice cream title index.html
+++ b/Ice cream title index.html
@@ -13,13 +13,16 @@
 <body>
 
 <!--navigation bar-->
-
-    <div class="navbar">
+<div class="navbar">
+    <div class="logo">
         <h2>Staci's Scoops</h2>
+    </div>
+    <div class="nav">
         <h3>Locations</h3>
         <h3>About</h3>
         <h3>Contact</h3>
     </div>
+</div>
 
 <!--main container-->
 
@@ -38,6 +41,7 @@
 
     <div class="slogan-cont">
         <h1 class="slogan">Come on,<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;give in to your urge</h1>
+        <br>
         <br>
         <button class="order-button" role="button">order now</button>
     </div>
