--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -28,17 +28,17 @@
                     <div class="scoops-cont">
                         <ul class="scoops-list" style="list-style: none">
                             <li class="list-item">
-                                <input type="radio" class="radio-btn" id="1scoop" />
+                                <input type="radio" name="scoopbtn" class="radio-btn" id="1scoop" />
                                 <label for="a-opt" class="label">1 scoop................1€</label>
                             </li>
                             
                             <li class="list-item">
-                                <input type="radio" class="radio-btn" id="2scoop" />
+                                <input type="radio" name="scoopbtn"  class="radio-btn" id="2scoop" />
                                 <label for="b-opt"class="label">2 scoops.............2€</label>
                             </li>
                             <li class="list-item">
-                                <input type="radio" class="radio-btn" id="3scoop" />
-                                <label for="c-opt"class="label">3 scoops.............3€</label>
+                                <input type="radio" name="scoopbtn" class="radio-btn" id="3scoop" />
+                                <label for="c-opt" class="label">3 scoops.............3€</label>
                             </li>
                         </ul>
                     </div>
