order button positioned

--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -28,16 +28,16 @@
                     <div class="scoops-cont">
                         <ul class="scoops-list" style="list-style: none">
                             <li>
-                                <input type="radio" name="scoopbtn" id="1scoop" />
+                                <input type="radio" name="scoopbtn" id="scoop1" />
                                 <label for="a-opt" class="label">1 scoop................1€</label>
                             </li>
                             
                             <li>
-                                <input type="radio" name="scoopbtn" id="2scoop" />
+                                <input type="radio" name="scoopbtn" id="scoop2" />
                                 <label for="b-opt"class="label">2 scoops.............2€</label>
                             </li>
                             <li>
-                                <input type="radio" name="scoopbtn" id="3scoop" />
+                                <input type="radio" name="scoopbtn" id="scoop3" />
                                 <label for="c-opt" class="label">3 scoops.............3€</label>
                             </li>
                         </ul>
@@ -130,9 +130,12 @@
                         <img id="melting-img" src="./Images/melted.png"/>
                         <h3>basket</h3>
                     </div>
-                    <div class="basket-output"></div>
-                    <div>
-                        <input class="order-button" type=button value='complete order'>
+
+                    <div class="basket-output">
+                    </div>
+
+                    <div class="orderbtn-cont">
+                        <input class="orderbtn" type=button value='complete order'>
                     </div>
                 </div>
             
