--- a/Ice cream title index.html
+++ b/Ice cream title index.html
@@ -43,7 +43,7 @@
         <h1 class="slogan">Come on,<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;give in to your urge</h1>
         <br>
         <br>
-        <input class="order-button" type=button onClick="location.href='Ice cream index.html'" value='order now'>
+        <input class="orderbtn" type=button onClick="location.href='Ice cream index.html'" value='order now'>
     </div>
 </div>
 </body>
