--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -59,6 +59,7 @@
                     </div>
                 </div> 
 <!--Flavors box-->
+
                 <div class="col-sm-3" id="flavors-box">
                     <div class="catagorie">
                         <h3>flavors</h3>
@@ -69,7 +70,6 @@
 
                         <input type="checkbox" name="flavor" id="vanilla">
                         <label for="vanilla">vanilla</label><br>
-                        <input type="number" min="0" max="3" id="vanillainput" placeholder="" />
 
                         <input type="checkbox" name="flavor" id="chocolate">
                         <label for="chocolate">chocolate</label><br>
@@ -91,7 +91,7 @@
                 </div>
 <!--Toppings box-->
                 <div class="col-sm-3" id="toppings-box">
-                    <div class="catagorie">
+                    <div class="catagorie" id="toppingstitle">
                         <h3>toppings</h3>
                     </div>
                     
