--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -70,29 +70,29 @@
                     <form class="flavors-list-cont" id="choice-cont">
                         <div class="flavors-list">
 
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="vanilla">
+                        <input type="number" id="input1" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox1" name="flavor" value="vanilla">
                         <label for="vanilla">vanilla</label><br>
 
                         
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="chocolate">
+                        <input type="number" id="input2" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox2" name="flavor" value="chocolate">
                         <label for="chocolate">chocolate</label><br>
 
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="strawberry">
+                        <input type="number" id="input3" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox3" name="flavor" value="strawberry">
                         <label for="strawberry">strawberry</label><br>
 
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="pistachio">
+                        <input type="number" id="input4" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox4" name="flavor" value="pistachio">
                         <label for="pistachio">pistachio</label><br>
 
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="banana">
+                        <input type="number" id="input5" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox5" name="flavor" value="banana">
                         <label for="banana">banana</label><br>
 
-                        <input type="number" id="input" name="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox" name="flavor" value="chocolatechip">
+                        <input type="number" id="input6" class="quantity" min="0" max="3">
+                        <input type="checkbox" id="checkbox6" name="flavor" value="chocolatechip">
                         <label for="chocolate chip">chocolate chip</label><br>
                         
                         </div>
