reset btn working

--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -135,10 +135,12 @@
                     </div>
 
                     <div class="basket-output" id="basketCont">
+                        
                     </div>
 
                     <div class="orderbtn-cont">
-                        <input class="orderbtn" id="orderBtn" type=button value='complete order'>
+                        <input class="resetbtn" id="resetBtn" type=button value='reset'>
+                        <input class="orderbtn" id="orderBtn" type=button value='order'>
                     </div>
                 </div>
                 
