--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -69,28 +69,28 @@
                     <form class="flavors-list-cont" id="flavorsCont">
 
                         <input type="number" id="input1" class="quantity" min="0" max="3"> 
-                        <input type="checkbox" id="checkbox1" name="flavor" value="vanilla" onclick="flavorOutput1()">
+                        <input type="checkbox" id="checkbox1" name="flavor" value="vanilla">
                         <label for="vanilla" >vanilla</label><br>
 
                         
                         <input type="number" id="input2" class="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox2" name="flavor" value="chocolate" onclick="">
+                        <input type="checkbox" id="checkbox2" name="flavor" value="chocolate">
                         <label for="chocolate">chocolate</label><br>
 
                         <input type="number" id="input3" class="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox3" name="flavor" value="strawberry" onclick="">
+                        <input type="checkbox" id="checkbox3" name="flavor" value="strawberry">
                         <label for="strawberry">strawberry</label><br>
 
                         <input type="number" id="input4" class="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox4" name="flavor" value="pistachio" onclick="">
+                        <input type="checkbox" id="checkbox4" name="flavor" value="pistachio">
                         <label for="pistachio">pistachio</label><br>
 
                         <input type="number" id="input5" class="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox5" name="flavor" value="banana" onclick="">
+                        <input type="checkbox" id="checkbox5" name="flavor" value="banana">
                         <label for="banana">banana</label><br>
 
                         <input type="number" id="input6" class="quantity" min="0" max="3">
-                        <input type="checkbox" id="checkbox6" name="flavor" value="chocolatechip" onclick="">
+                        <input type="checkbox" id="checkbox6" name="flavor" value="chocolatechip">
                         <label for="chocolate chip">chocolate chip</label><br>
 
                     </form>
@@ -146,7 +146,7 @@
                         <p id="strawberryOutput" style="display:none">strawberry</p>
                         <p id="pistachioOutput" style="display:none">pistachio</p>
                         <p id="bananaOutput" style="display:none">banana</p>
-                        <p id="chocolatechipOutput" style="display:none">chocolate chip</p>
+                        <p id="chocolateChipOutput" style="display:none">chocolate chip</p>
                         <br>
 
                         <p id="1eur" class="total" style="display:none">1€</p>
