--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -153,6 +153,15 @@
                         <p id="flavorOutput6" style="display:none">chocolate chip</p>
                         <br>
 
+                        <p id="toppingOutput1" style="display:none">whipped cream</p>
+                        <p id="toppingOutput2" style="display:none">sprinkles</p>
+                        <p id="toppingOutput3" style="display:none">chocolate sauce</p>
+                        <p id="toppingOutput4" style="display:none">caramel sauce</p>
+                        <p id="toppingOutput5" style="display:none">m&m's</p>
+                        <p id="toppingOutput6" style="display:none">no toppings</p>
+
+                        <br>
+
                         <p id="1eur" class="total" style="display:none">1€</p>
                         <p id="2eur" class="total" style="display:none">2€</p>
                         <p id="3eur" class="total" style="display:none">3€</p>
