--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -26,33 +26,33 @@
 
                     <!-- this id is for the mobile version menu dropdown-->
                     <div class="scoops-cont"  id="sizesCont">
-                        <ul class="scoops-list" style="list-style: none">
+                        <ul class="scoopsList" style="list-style: none">
                             <li>
-                                <input type="radio" name="scoopbtn" id="scoop1" />
-                                <label for="a-opt" class="label">1 scoop................1€</label>
+                                <input type="checkbox" name="scoopbtn" id="scoop1"/>
+                                <label for="a-opt" >1 scoop................1€</label>
                             </li>
                             
                             <li>
-                                <input type="radio" name="scoopbtn" id="scoop2" />
-                                <label for="b-opt"class="label">2 scoops.............2€</label>
+                                <input type="checkbox" name="scoopbtn" id="scoop2" />
+                                <label for="b-opt">2 scoops.............2€</label>
                             </li>
                             <li>
-                                <input type="radio" name="scoopbtn" id="scoop3"/>
-                                <label for="c-opt" class="label">3 scoops.............3€</label>
+                                <input type="checkbox" name="scoopbtn" id="scoop3"/>
+                                <label for="c-opt">3 scoops.............3€</label>
                             </li>
                         </ul>
                         <img id="img-bowl" src="Images/bowl.png" />
                     </div>
-<!--bowl-cone-list-->
+<!--bowlConeList-->
                     <div class="bowl-cone-cont" id="bowlConeCont">
-                        <ul class="bowl-cone-list" style="list-style: none">
+                        <ul class="bowlConeList" style="list-style: none">
                             <li>
-                                <input type="radio" name="bowl-conebtn" id="bowl" />
+                                <input type="checkbox" name="bowl-conebtn" id="bowl" />
                                 <label for="a-opt" class="label">bowl</label>
                             </li>
                             
                             <li>
-                                <input type="radio" name="bowl-conebtn" id="cone" />
+                                <input type="checkbox" name="bowl-conebtn" id="cone" />
                                 <label for="b-opt"class="label">cone</label>
                             </li>
                         </ul>
@@ -137,8 +137,8 @@
 
                     <div class="basket-output" id="basketOutput">
 
-                        <p id="bowlOutput" style="display:none">bowl</p>
-                        <p id="coneOutput" style="display:none">cone</p>
+                        <p id="bowlOutput" style="display:none"><img type="button" id="delete" src="./Images/delete.png"/>bowl</p>
+                        <p id="coneOutput" style="display:none"><img type="button" id="delete" src="./Images/delete.png"/>cone</p>
                         <br>
 
                         <p id="flavorOutput1" style="display:none"><img type="button" id="delete" src="./Images/delete.png"/>vanilla</p> 
