radio output working (scoops-cone)

--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -137,10 +137,6 @@
 
                     <div class="basket-output" id="basketOutput">
 
-                        <p id="bowlOutput" style="display:none"><img type="button" id="deleteBowl" class="delete" src="./Images/delete.png"/>bowl</p>
-                        <p id="coneOutput" style="display:none"><img type="button" id="deleteCone" class="delete" src="./Images/delete.png"/>cone</p>
-                        <br>
-
                         <p id="flavorOutput1" style="display:none"><img type="button" id="deleteF1" class="delete" src="./Images/delete.png"/>vanilla</p> 
                         <p id="flavorOutput2" style="display:none"><img type="button" id="deleteF2" class="delete" src="./Images/delete.png"/>chocolate</p>
                         <p id="flavorOutput3" style="display:none"><img type="button" id="deleteF3" class="delete" src="./Images/delete.png"/>strawberry</p>
@@ -155,8 +151,10 @@
                         <p id="toppingOutput4" style="display:none"><img type="button" id="deleteT4" class="delete" src="./Images/delete.png"/>caramel sauce</p>
                         <p id="toppingOutput5" style="display:none"><img type="button" id="deleteT5" class="delete" src="./Images/delete.png"/>m&m's</p>
                         <p id="toppingOutput6" style="display:none"><img type="button" id="deleteT6" class="delete" src="./Images/delete.png"/>no toppings</p>
-
                         <br>
+
+                        <p id="bowlOutput" class="bowlConeOutput" style="display:none">bowl</p>
+                        <p id="coneOutput" class="bowlConeOutput" style="display:none">cone</p>
 
                         <p id="1eur" class="total" style="display:none">1€</p>
                         <p id="2eur" class="total" style="display:none">2€</p>
