no toppings responsive

--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -136,20 +136,42 @@
 
                     <div class="basket-output" id="basketOutput">
 
-                        <p id="flavorOutput1" style="display:none"><img type="button" id="deleteF1" class="delete" src="./Images/delete.png"/>vanilla</p> 
-                        <p id="flavorOutput2" style="display:none"><img type="button" id="deleteF2" class="delete" src="./Images/delete.png"/>chocolate</p>
-                        <p id="flavorOutput3" style="display:none"><img type="button" id="deleteF3" class="delete" src="./Images/delete.png"/>strawberry</p>
-                        <p id="flavorOutput4" style="display:none"><img type="button" id="deleteF4" class="delete" src="./Images/delete.png"/>pistachio</p>
-                        <p id="flavorOutput5" style="display:none"><img type="button" id="deleteF5" class="delete" src="./Images/delete.png"/>banana</p>
-                        <p id="flavorOutput6" style="display:none"><img type="button" id="deleteF6" class="delete" src="./Images/delete.png"/>chocolate chip</p>
+                        <p id="flavorOutput1" style="display:none">
+                            <img type="button" id="deleteF1" class="delete" src="./Images/delete.png"/>vanilla</p> 
+
+                        <p id="flavorOutput2" style="display:none">
+                            <img type="button" id="deleteF2" class="delete" src="./Images/delete.png"/>chocolate</p>
+
+                        <p id="flavorOutput3" style="display:none">
+                            <img type="button" id="deleteF3" class="delete" src="./Images/delete.png"/>strawberry</p>
+
+                        <p id="flavorOutput4" style="display:none">
+                            <img type="button" id="deleteF4" class="delete" src="./Images/delete.png"/>pistachio</p>
+
+                        <p id="flavorOutput5" style="display:none">
+                            <img type="button" id="deleteF5" class="delete" src="./Images/delete.png"/>banana</p>
+
+                        <p id="flavorOutput6" style="display:none">
+                            <img type="button" id="deleteF6" class="delete" src="./Images/delete.png"/>chocolate chip</p>
                         <br>
 
-                        <p id="toppingOutput1" style="display:none"><img type="button" id="deleteT1" class="delete" src="./Images/delete.png"/>whipped cream</p>
-                        <p id="toppingOutput2" style="display:none"><img type="button" id="deleteT2" class="delete" src="./Images/delete.png"/>sprinkles</p>
-                        <p id="toppingOutput3" style="display:none"><img type="button" id="deleteT3" class="delete" src="./Images/delete.png"/>chocolate sauce</p>
-                        <p id="toppingOutput4" style="display:none"><img type="button" id="deleteT4" class="delete" src="./Images/delete.png"/>caramel sauce</p>
-                        <p id="toppingOutput5" style="display:none"><img type="button" id="deleteT5" class="delete" src="./Images/delete.png"/>m&m's</p>
-                        <p id="toppingOutput6" style="display:none"><img type="button" id="deleteT6" class="delete" src="./Images/delete.png"/>no toppings</p>
+                        <p id="toppingOutput1" style="display:none">
+                            <img type="button" id="deleteT1" class="delete" src="./Images/delete.png"/>whipped cream</p>
+
+                        <p id="toppingOutput2" style="display:none">
+                            <img type="button" id="deleteT2" class="delete" src="./Images/delete.png"/>sprinkles</p>
+
+                        <p id="toppingOutput3" style="display:none">
+                            <img type="button" id="deleteT3" class="delete" src="./Images/delete.png"/>chocolate sauce</p>
+
+                        <p id="toppingOutput4" style="display:none">
+                            <img type="button" id="deleteT4" class="delete" src="./Images/delete.png"/>caramel sauce</p>
+
+                        <p id="toppingOutput5" style="display:none">
+                            <img type="button" id="deleteT5" class="delete" src="./Images/delete.png"/>m&m's</p>
+                            
+                        <p id="toppingOutput6" style="display:none">
+                            <img type="button" id="deleteT6" class="delete" src="./Images/delete.png"/>no toppings</p>
                         <br>
 
                         <p id="bowlOutput" class="bowlConeOutput" style="display:none">bowl</p>
