--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -121,7 +121,7 @@
                         <input   type="checkbox" id="topping5">
                         <label for="m&m's">m&m's</label><br>
 
-                        <input   type="checkbox" id="topping6">
+                        <input   type="checkbox" id="noToppings">
                         <label for="notoppings">none</label><br>
 
                     </form>
@@ -172,7 +172,7 @@
                         <p id="toppingOutput5" style="display:none">
                             <img type="button" id="deleteT5" class="delete" src="./Images/delete.png"/>m&m's</p>
 
-                        <p id="toppingOutput6" style="display:none">
+                        <p id="noToppingsOutput" style="display:none">
                             <img type="button" id="deleteT6" class="delete" src="./Images/delete.png"/>no toppings</p>
                         <br>
 
