--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -70,28 +70,28 @@
 
                     <form class="flavors-list-cont" id="flavorsCont">
 
-                        <input type="number" id="input1" class="quantity" min="0" max="3"> 
+                        <input type="number" id="input1" min="1" max="3" onChange="getVal()"> 
                         <input  type="checkbox" id="flavor1">
                         <label for="vanilla" >vanilla</label><br>
 
                         
-                        <input type="number" id="input2" class="quantity" min="0" max="3">
+                        <input type="number" id="input2" class="quantity" min="1" max="3">
                         <input  type="checkbox" id="flavor2" >
                         <label for="chocolate">chocolate</label><br>
 
-                        <input type="number" id="input3" class="quantity" min="0" max="3">
+                        <input type="number" id="input3" class="quantity" min="1" max="3">
                         <input  type="checkbox" id="flavor3" >
                         <label for="strawberry">strawberry</label><br>
 
-                        <input type="number" id="input4" class="quantity" min="0" max="3">
+                        <input type="number" id="input4" class="quantity" min="1" max="3">
                         <input  type="checkbox" id="flavor4" >
                         <label for="pistachio">pistachio</label><br>
 
-                        <input type="number" id="input5" class="quantity" min="0" max="3">
+                        <input type="number" id="input5" class="quantity" min="1" max="3">
                         <input  type="checkbox" id="flavor5">
                         <label for="banana">banana</label><br>
 
-                        <input type="number" id="input6" class="quantity" min="0" max="3">
+                        <input type="number" id="input6" class="quantity" min="1" max="3">
                         <input  type="checkbox" id="flavor6">
                         <label for="chocolate chip">chocolate chip</label><br>
 
@@ -140,7 +140,7 @@
 
                         
                         <p id="flavorOutput1" style="display:none">
-                            <img type="button" id="deleteF1" class="delete" src="./Images/delete.png"/>vanilla</p>
+                            <img type="button" id="deleteF1" class="delete" src="./Images/delete.png"/><div id="scoopQuantity"></div>vanilla</p>
 
                         <p id="flavorOutput2" style="display:none">
                             <img type="button" id="deleteF2" class="delete" src="./Images/delete.png"/>chocolate</p>
