--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -70,7 +70,7 @@
 
                     <form class="flavors-list-cont" id="flavorsCont">
 
-                        <input type="number" id="input1" min="1" max="3" onChange="getVal()"> 
+                        <input type="number" id="input1" class="quantity" min="1" max="3" onChange="getVal()"> 
                         <input  type="checkbox" id="flavor1">
                         <label for="vanilla" >vanilla</label><br>
 
