--- a/Ice cream index.html
+++ b/Ice cream index.html
@@ -131,7 +131,7 @@
                 <div class="col-sm-3" id="basket-box">
                     <div class="catagorie">
                         <img id="melting-img" src="./Images/melted.png"/>
-                        <h3 type="button" id="basketBtn">basket</h3>
+                        <h3 type="button"  class="" id="basketBtn">basket</h3>
                     </div>
 
                   <div id="basketCont">
